fixing extra padding

--- a/src/odbase/var/www/themes/default/main.css
+++ b/src/odbase/var/www/themes/default/main.css
@@ -1078,7 +1078,7 @@ fieldset.foldable ul {display:block;overflow-y: auto;transition: all 0.5s ease;}
 fieldset.folded legend:after {	content:"  [+]";}
 fieldset.folded ul {	max-height: 0px;}
 fieldset.unfolded legend:after{	content: "  [-]";}
-fieldset.unfolded ul {max-height: 500px;}
+fieldset.unfolded ul {max-height: 500px;padding: 1px;}
 
 /* cellphone format */ 
 @media (max-width:480px) {
